--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Machine Parameters</title>
+  <title>Machine Dashboard</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -36,15 +36,24 @@
       color: white;
       border: none;
       cursor: pointer;
+      margin: 10px 0;
     }
 
     button:hover {
       background: #0056b3;
     }
+
+    .card {
+      background: white;
+      padding: 20px;
+      margin: 10px 0;
+      box-shadow: 0 0 10px #ccc;
+    }
   </style>
 </head>
 <body>
 
+  <!-- Password Prompt -->
   <div id="login-box" class="login-box">
     <h2>Enter Password</h2>
     <input type="password" id="password" placeholder="Password"/>
@@ -53,26 +62,92 @@
     <p id="error" style="color:red;"></p>
   </div>
 
-  <div id="protected-content">
-    <h1>Machine Dashboard</h1>
-    <p>Temperature: 37.5°C</p>
-    <p>Status: Running</p>
-    <!-- Machine parameters -->
-  </div>
+  <!-- Hidden Dashboard Area -->
+  <div id="protected-content"></div>
 
   <script>
     function checkPassword() {
       const input = document.getElementById("password").value;
-      const correctPassword = "Wakatimba"; // Change this to your secret password
+      const correctPassword = "Wakatimba"; // Change to your desired password
       const error = document.getElementById("error");
 
       if (input === correctPassword) {
         document.getElementById("login-box").style.display = "none";
+
+        // Inject Dashboard HTML + Script
+        document.getElementById("protected-content").innerHTML = `
+          <h1>Machine Monitoring Dashboard</h1>
+
+          <div class="card">
+            <h3>Status</h3>
+            <p id="status">Running</p>
+            <button onclick="toggleStatus()">Toggle Status</button>
+          </div>
+
+          <div class="card">
+            <h3>Temperature</h3>
+            <p id="temp">-- °C</p>
+          </div>
+
+          <div class="card">
+            <h3>Voltage</h3>
+            <p id="voltage">-- V</p>
+          </div>
+
+          <div class="card">
+            <button onclick="downloadCSV()">Download CSV</button>
+          </div>
+
+          <script>
+            let historyData = [];
+
+            function updateTempAndVoltage() {
+              const temp = (Math.random() * 30 + 20).toFixed(1);
+              const voltage = (Math.random() * 220 + 10).toFixed(1);
+              const time = new Date().toLocaleTimeString();
+
+              document.getElementById('temp').innerText = temp + " °C";
+              document.getElementById('voltage').innerText = voltage + " V";
+
+              historyData.push({ time, temp, voltage });
+              if (historyData.length > 100) historyData.shift(); // Keep last 100 records
+            }
+
+            function toggleStatus() {
+              const status = document.getElementById('status');
+              status.innerText = (status.innerText === "Running") ? "Stopped" : "Running";
+            }
+
+            function downloadCSV() {
+              if (historyData.length === 0) {
+                alert("No data to download yet!");
+                return;
+              }
+
+              let csv = "Time,Temperature (°C),Voltage (V)\\n";
+              historyData.forEach(row => {
+                csv += \`\${row.time},\${row.temp},\${row.voltage}\\n\`;
+              });
+
+              const blob = new Blob([csv], { type: 'text/csv' });
+              const link = document.createElement('a');
+              link.href = URL.createObjectURL(blob);
+              link.download = 'machine_data.csv';
+              link.click();
+            }
+
+            // Start simulating data
+            updateTempAndVoltage();
+            setInterval(updateTempAndVoltage, 3000);
+          <\/script>
+        `;
+
         document.getElementById("protected-content").style.display = "block";
       } else {
         error.textContent = "Incorrect password.";
       }
     }
   </script>
+
 </body>
 </html>
