--- a/index.html
+++ b/index.html
@@ -2,152 +2,237 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Machine Dashboard</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
-      background: #f5f5f5;
+      font-family: 'Segoe UI', sans-serif;
+      background: #f0f2f5;
+      margin: 0;
+      padding: 0;
     }
 
-    #protected-content {
-      display: none;
+    .container {
+      max-width: 900px;
+      margin: auto;
+      padding: 20px;
     }
 
     .login-box {
       max-width: 300px;
       margin: 100px auto;
       background: white;
-      padding: 20px;
-      box-shadow: 0 0 10px #aaa;
+      padding: 30px;
+      border-radius: 8px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.2);
       text-align: center;
     }
 
-    input[type="password"] {
+    .login-box input {
       padding: 10px;
-      width: 90%;
-      margin-bottom: 10px;
+      width: 100%;
+      margin-bottom: 15px;
     }
 
-    button {
+    .login-box button {
       padding: 10px 20px;
       background: #007bff;
       color: white;
       border: none;
       cursor: pointer;
-      margin: 10px 0;
     }
 
-    button:hover {
-      background: #0056b3;
+    .dashboard {
+      display: none;
+    }
+
+    h1 {
+      text-align: center;
+      color: #333;
     }
 
     .card {
       background: white;
+      border-radius: 10px;
       padding: 20px;
-      margin: 10px 0;
-      box-shadow: 0 0 10px #ccc;
+      margin: 15px 0;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+
+    button {
+      padding: 10px 15px;
+      border: none;
+      background: #28a745;
+      color: white;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background: #218838;
+    }
+
+    canvas {
+      max-width: 100%;
     }
   </style>
 </head>
 <body>
 
-  <!-- Password Prompt -->
-  <div id="login-box" class="login-box">
+  <!-- Login Box -->
+  <div id="login" class="login-box">
     <h2>Enter Password</h2>
-    <input type="password" id="password" placeholder="Password"/>
-    <br/>
+    <input type="password" id="password" placeholder="Password" />
     <button onclick="checkPassword()">Access</button>
-    <p id="error" style="color:red;"></p>
+    <p id="error" style="color: red;"></p>
   </div>
 
-  <!-- Hidden Dashboard Area -->
-  <div id="protected-content"></div>
+  <!-- Dashboard -->
+  <div id="dashboard" class="dashboard">
+    <div class="container">
+      <h1>Machine Monitoring Dashboard</h1>
+
+      <div class="card">
+        <h3>Status</h3>
+        <p id="status">Running</p>
+        <button onclick="toggleStatus()">Toggle Status</button>
+      </div>
+
+      <div class="card">
+        <h3>Temperature: <span id="temp">--</span> °C</h3>
+        <h3>Voltage: <span id="voltage">--</span> V</h3>
+      </div>
+
+      <div class="card">
+        <canvas id="tempChart"></canvas>
+      </div>
+
+      <div class="card">
+        <canvas id="voltChart"></canvas>
+      </div>
+
+      <div class="card">
+        <button onclick="downloadCSV()">Download Data as CSV</button>
+      </div>
+    </div>
+  </div>
 
   <script>
+    const correctPassword = "wakatimba";
+    const historyData = [];
+
     function checkPassword() {
-      const input = document.getElementById("password").value;
-      const correctPassword = "Wakatimba"; // Change to your desired password
-      const error = document.getElementById("error");
-
-      if (input === correctPassword) {
-        document.getElementById("login-box").style.display = "none";
-
-        // Inject Dashboard HTML + Script
-        document.getElementById("protected-content").innerHTML = `
-          <h1>Machine Monitoring Dashboard</h1>
-
-          <div class="card">
-            <h3>Status</h3>
-            <p id="status">Running</p>
-            <button onclick="toggleStatus()">Toggle Status</button>
-          </div>
-
-          <div class="card">
-            <h3>Temperature</h3>
-            <p id="temp">-- °C</p>
-          </div>
-
-          <div class="card">
-            <h3>Voltage</h3>
-            <p id="voltage">-- V</p>
-          </div>
-
-          <div class="card">
-            <button onclick="downloadCSV()">Download CSV</button>
-          </div>
-
-          <script>
-            let historyData = [];
-
-            function updateTempAndVoltage() {
-              const temp = (Math.random() * 30 + 20).toFixed(1);
-              const voltage = (Math.random() * 220 + 10).toFixed(1);
-              const time = new Date().toLocaleTimeString();
-
-              document.getElementById('temp').innerText = temp + " °C";
-              document.getElementById('voltage').innerText = voltage + " V";
-
-              historyData.push({ time, temp, voltage });
-              if (historyData.length > 100) historyData.shift(); // Keep last 100 records
-            }
-
-            function toggleStatus() {
-              const status = document.getElementById('status');
-              status.innerText = (status.innerText === "Running") ? "Stopped" : "Running";
-            }
-
-            function downloadCSV() {
-              if (historyData.length === 0) {
-                alert("No data to download yet!");
-                return;
-              }
-
-              let csv = "Time,Temperature (°C),Voltage (V)\\n";
-              historyData.forEach(row => {
-                csv += \`\${row.time},\${row.temp},\${row.voltage}\\n\`;
-              });
-
-              const blob = new Blob([csv], { type: 'text/csv' });
-              const link = document.createElement('a');
-              link.href = URL.createObjectURL(blob);
-              link.download = 'machine_data.csv';
-              link.click();
-            }
-
-            // Start simulating data
-            updateTempAndVoltage();
-            setInterval(updateTempAndVoltage, 3000);
-          <\/script>
-        `;
-
-        document.getElementById("protected-content").style.display = "block";
+      const entered = document.getElementById("password").value;
+      if (entered === correctPassword) {
+        document.getElementById("login").style.display = "none";
+        document.getElementById("dashboard").style.display = "block";
       } else {
-        error.textContent = "Incorrect password.";
+        document.getElementById("error").innerText = "Incorrect password.";
       }
     }
-  </script>
 
+    function toggleStatus() {
+      const status = document.getElementById("status");
+      status.innerText = (status.innerText === "Running") ? "Stopped" : "Running";
+    }
+
+    // Chart Setup
+    const tempCtx = document.getElementById("tempChart").getContext("2d");
+    const voltCtx = document.getElementById("voltChart").getContext("2d");
+
+    const tempChart = new Chart(tempCtx, {
+      type: 'line',
+      data: {
+        labels: [],
+        datasets: [{
+          label: 'Temperature (°C)',
+          data: [],
+          borderColor: 'orange',
+          backgroundColor: 'rgba(255,165,0,0.2)',
+          fill: true
+        }]
+      },
+      options: {
+        responsive: true,
+        scales: {
+          x: { display: true },
+          y: { beginAtZero: true }
+        }
+      }
+    });
+
+    const voltChart = new Chart(voltCtx, {
+      type: 'line',
+      data: {
+        labels: [],
+        datasets: [{
+          label: 'Voltage (V)',
+          data: [],
+          borderColor: 'blue',
+          backgroundColor: 'rgba(0,0,255,0.2)',
+          fill: true
+        }]
+      },
+      options: {
+        responsive: true,
+        scales: {
+          x: { display: true },
+          y: { beginAtZero: true }
+        }
+      }
+    });
+
+    function updateData() {
+      const temp = (Math.random() * 30 + 20).toFixed(1);
+      const volt = (Math.random() * 20 + 210).toFixed(1);
+      const time = new Date().toLocaleTimeString();
+
+      // Update text
+      document.getElementById("temp").innerText = temp;
+      document.getElementById("voltage").innerText = volt;
+
+      // Store in history
+      historyData.push({ time, temp, volt });
+      if (historyData.length > 30) historyData.shift();
+
+      // Update charts
+      tempChart.data.labels.push(time);
+      tempChart.data.datasets[0].data.push(temp);
+      if (tempChart.data.labels.length > 30) {
+        tempChart.data.labels.shift();
+        tempChart.data.datasets[0].data.shift();
+      }
+      tempChart.update();
+
+      voltChart.data.labels.push(time);
+      voltChart.data.datasets[0].data.push(volt);
+      if (voltChart.data.labels.length > 30) {
+        voltChart.data.labels.shift();
+        voltChart.data.datasets[0].data.shift();
+      }
+      voltChart.update();
+    }
+
+    setInterval(updateData, 3000);
+
+    function downloadCSV() {
+      if (historyData.length === 0) {
+        alert("No data to download!");
+        return;
+      }
+
+      let csv = "Time,Temperature (°C),Voltage (V)\n";
+      historyData.forEach(row => {
+        csv += `${row.time},${row.temp},${row.volt}\n`;
+      });
+
+      const blob = new Blob([csv], { type: "text/csv" });
+      const link = document.createElement("a");
+      link.href = URL.createObjectURL(blob);
+      link.download = "machine_data.csv";
+      link.click();
+    }
+  </script>
 </body>
 </html>
